--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit==1.36.0
-pandas
-numpy
-scikit-learn==1.4.2
-joblib==1.4.2
-lightgbm
+streamlit==1.52.2
+numpy==1.26.4
+pandas==2.1.4
+scikit-learn==1.3.2
+joblib==1.3.2
+lightgbm==4.3.0
+
